# fastcoll

./: CMakeLists.txt  Makefile  README.md  md5_data2
code/: Makefile  fastcoll  main.cpp  md5_data1
